Fix select styling on mobile

--- a/code/style.css
+++ b/code/style.css
@@ -58,6 +58,9 @@ select {
   align-self: center;
   appearance: none;
   text-align: center;
+  text-align-last: center;
+  -ms-text-align-last: center;
+  -moz-text-align-last: center;
 }
 
 .counters {
